src/objects/ppm__c.object
<CustomObject>
    <description>Private Placement Memorandum</description>
    <fields>
        <fullName>Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment</label>
        <referenceTo>Commitment__c</referenceTo>
        <relationshipLabel>Private Placement Memorandum</relationshipLabel>
        <relationshipName>Private_Placement_Memorandum</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Private Placement Memorandum</relationshipLabel>
        <relationshipName>Private_Placement_Memorandum</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Execution_Date__c</fullName>
        <label>LOI Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPM_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>PPM Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PPM_ID__c</fullName>
        <description>Internal ID for the PPM.</description>
        <inlineHelpText>Internal ID for the PPM.</inlineHelpText>
        <label>PPM Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM_Recipient__c</fullName>
        <description>The contact that you are sending the private placement memorandum to.</description>
        <inlineHelpText>The contact that you are sending the private placement memorandum to.</inlineHelpText>
        <label>PPM Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Private Placement Memorandum</relationshipLabel>
        <relationshipName>Private_Placement_Memorandum</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PPM_Supplement_Number__c</fullName>
        <label>PPM Supplement Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redlined_PPM_Number__c</fullName>
        <label>Redlined PPM Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redlined_SBIC_Supplement_Number__c</fullName>
        <label>Redlined SBIC Supplement Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBA_LOI_Execution_Date__c</fullName>
        <label>SBA LOI Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBIC__c</fullName>
        <label>SBIC Supplement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who sent the PPM.</description>
        <inlineHelpText>The user who sent the PPM.</inlineHelpText>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Private_Placement_Memorandum</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Private Placement Memorandum</label>
    <nameField>
        <displayFormat>PPM-{000000}</displayFormat>
        <label>Private Placement Memorandum Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Placement Memorandum</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>